tests/api/reference/negative/10-replace-empty-needle.asm
const invalid: string = replace("abc", "", "x")
